[feat] Add functionality to Matrix4x4